--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,7 +17,8 @@
 
 - name: Run serf agent {{ inventory_hostname }}
   shell: nohup serf agent -log-level=debug -event-handler=/tmp/event.sh
-  async: 1
+  async: 9999999999999
+  poll: 0
 
 - name: Join a cluster to agent {{ inventory_hostname }}
   command: serf join {{ inventory_hostname }}
